# ccminer-neoscrypt

./: .gitignore  INSTALL  Makefile.am  README.md  README.txt  api.cpp  bitcoin.cu  bitslice_transformations_quad.cu  blake32.cu  build.sh  ccminer.cpp  ccminer.opensdf  ccminer.sln  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  cpu-miner.c  cpuminer-config.h  crc32.cpp  cuda.cpp  cuda_bitcoin.cu  cuda_checkhash.cu  cuda_groestlcoin.cu  cuda_helper.h  cuda_myriadgroestl.cu  cuda_nist5.cu  cuda_vector.h  fuguecoin.cpp  groestl_functions_quad.cu  groestlcoin.cpp  hashlog.cpp  log.c  log.cpp  log.h  miner.h  myriadgroestl.cpp  nvml.cpp  nvml.h  pentablake.cu  scrypt-jane.cpp  (+8 more)
Algo256/: blake256.cu  cuda_blake256.cu  cuda_bmw256.cu  cuda_cubehash256.cu  cuda_fugue256.cu  cuda_groestl256.cu  cuda_keccak256.cu  cuda_skein256.cu  keccak256.cu
JHA/: cuda_jha_compactionTest.cu  cuda_jha_keccak512.cu  jackpotcoin.cu
api/: index.php
bitcredit/: bitcredit.cu  cuda_bitcredit.cu
compat/: gettid.h  localtime_r.h
heavy/: cuda_blake512.cu  cuda_combine.cu  cuda_groestl512.cu  cuda_hefty1.cu  cuda_keccak512.cu  cuda_sha256.cu  heavy.cu
keccak/: keccak256.cu
lyra2/: Lyra2.c  Sponge.c  Sponge.h  cuda_lyra2.cu  cuda_lyra2v2.cu  lyra2RE.cu  lyra2REv2.cu
m7/: cuda_m7_haval256.cu  cuda_m7_sha256.cu  cuda_m7_sha512.cu  cuda_m7_whirlpool.cu  cuda_mul.cu  cuda_mul2.cu  cuda_ripemd160.cu  cuda_tiger192.cu  m7.cu  m7_keccak512.cu
neoscrypt/: cuda_neoscrypt.cu  neoscrypt.cu
quark/: animecoin.cu  cuda_bmw512.cu  cuda_jh512.cu  cuda_jh512keccak512.cu  cuda_quark_blake512.cu  cuda_quark_compactionTest.cu  cuda_quark_groestl512.cu  cuda_quark_keccak512.cu  cuda_skein512.cu  quarkcoin.cu
qubit/: deep.cu  doom.cu  qubit.cu  qubit_luffa512.cu
scrypt/: nv_kernel2.cu  salsa_kernel.cu  salsa_kernel.h  sha2.c  (+1 more)
(+42 files in other folders)
